# ChangeLog for sci-libs/umfpack
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-libs/umfpack/ChangeLog,v 1.15 2009/10/12 20:00:41 jer Exp $

  12 Oct 2009; Jeroen Roovers <jer@gentoo.org> umfpack-5.2.0.ebuild:
  Stable for HPPA (bug #245707).

  27 Sep 2009; nixnut <nixnut@gentoo.org> umfpack-5.2.0.ebuild:
  ppc stable #245707

  20 Apr 2009; Markus Meier <maekke@gentoo.org> umfpack-5.2.0:
  x86 stable, bug #245707

  27 Mar 2009; Ferris McCormick <fmccor@gentoo.org> umfpack-5.2.0.ebuild:
  Sparc stable, preparation for bug #245707.

  23 Mar 2009; Jeremy Olexa <darkside@gentoo.org> umfpack-5.2.0.ebuild:
  amd64 stable, bug 245707

  23 Mar 2009; Jeremy Olexa <darkside@gentoo.org> umfpack-5.2.0.ebuild:
  amd64 stable, bug 245707

  08 Feb 2009; Tobias Klausmann <klausman@gentoo.org> umfpack-5.2.0.ebuild:
  Stable on alpha, bug #245707

  08 Jul 2008; Sébastien Fabbro <bicatali@gentoo.org>
  -files/umfpack-5.0.3-autotools.patch,
  -files/umfpack-5.1.0-autotools.patch, files/umfpack-5.2.0-autotools.patch,
  -umfpack-5.0.3.ebuild, -umfpack-5.1.0.ebuild:
  Removed older versions, make tests not failures not die the src_test since
  almost all of the failures were only timings. This should be fixed next
  version bump, upstream contacted.

  15 Apr 2008; Jeroen Roovers <jer@gentoo.org> umfpack-5.2.0.ebuild:
  Marked ~hppa (bug #215834).

  12 Apr 2008; Raúl Porcel <armin76@gentoo.org> umfpack-5.2.0.ebuild:
  Add ~sparc wrt #215834

  07 Apr 2008; Tobias Klausmann <klausman@gentoo.org> umfpack-5.2.0.ebuild:
  Keyworded on alpha, bug #215834

  26 Mar 2008; Markus Rothe <corsair@gentoo.org> umfpack-5.2.0.ebuild:
  Added ~ppc64; bug #213359

*umfpack-5.2.0 (29 Jan 2008)

  29 Jan 2008; Sébastien Fabbro <bicatali@gentoo.org>
  +files/umfpack-5.2.0-autotools.patch, metadata.xml, +umfpack-5.2.0.ebuild:
  Version bump. Updated description, udpated patch.
