@@ -1,5 +1,7 @@
 AUX umfpack-5.2.0-autotools.patch 18317 RMD160 1a45245a299e831ea7d5bf5cd3c2fab166310bb6 SHA1 0656cc130ff6002520364edc88ca919a78277c63 SHA256 1fc1b6465d73582e61c0782b2d44f3b4e0f73ff22de9f65ffcdfc537c04d1452
 DIST UMFPACK-5.2.0.tar.gz 1122066 RMD160 98cb8c6f3d62d0f78018f82714b063e9a4aaa4c0 SHA1 056df2b498c97a5e4ed0b396f55e4e4faf4ca346 SHA256 cdf1061c551625f7d572f6f887bad978b4e0e90c6e448a08013ba72c95691c1c
+DIST UMFPACK-5.4.0.tar.gz 1105287 RMD160 bceee72614d676b0496458869afd4c5a7c42e016 SHA1 b9f7d1329d537fe42c8f1cb4a48e93846c197cd2 SHA256 a93854547441d17621cc341c89c7368d238886659f6776c2b727792c0a04c24f
 EBUILD umfpack-5.2.0.ebuild 1101 RMD160 cbb613c2eb58d39379102474a4acec134486e484 SHA1 ac3b6dbcb9ee6281eeded4c6556b765b6205b7a1 SHA256 20a8edd39bc1c0e2d88b7d2f1748ac9dfad751918155ceb57639a09b38944d9c
-MISC ChangeLog 2568 RMD160 609a5fbb7823b89c5d54f6503cde7f78df8c1865 SHA1 41bc042c5c5f6e748f0bb1a4e4b4b903c0917cf5 SHA256 c83a75199205e746850cc7c7ff12a2bfed416ade28aba06beff8b941d708080e
+EBUILD umfpack-5.4.0.ebuild 1039 RMD160 7b9ef22af68ef7e195b09c5731985e2486aae4cb SHA1 0f46ffc2f4abc249bafc1fd1dd1056520db3e7b3 SHA256 e440471cc73513f7ed7b28cc83cf0a13832f4901a365f6240e4b5f556e96e5db
+MISC ChangeLog 2699 RMD160 354b60921210f24febf77a6c08720b939dcc31e8 SHA1 3db2261c136417b675d449aceef67cfd0a23885f SHA256 f0d1133b8f78bce10508d8c85e619d8b3606ae66776fe49311b0f8c1ec3474a3
 MISC metadata.xml 459 RMD160 68be0781281582f5e418dd632e549f61c8302ef3 SHA1 be53152268274dd71ef87b819014761f95785d1c SHA256 21d8e999c800cfa92da3b00eb81697bb810b02ed2b693babf862877ea3cbc377
