@@ -1,6 +1,12 @@
 # ChangeLog for sci-libs/umfpack
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/umfpack/ChangeLog,v 1.15 2009/10/12 20:00:41 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/umfpack/ChangeLog,v 1.16 2009/11/21 07:47:21 bicatali Exp $
+
+*umfpack-5.4.0 (21 Nov 2009)
+
+  21 Nov 2009; Sébastien Fabbro <bicatali@gentoo.org>
+  +umfpack-5.4.0.ebuild:
+  Version bump
 
   12 Oct 2009; Jeroen Roovers <jer@gentoo.org> umfpack-5.2.0.ebuild:
   Stable for HPPA (bug #245707).
